# eclip

./: Cargo.toml  README.md
eclip_derive/: Cargo.toml
eclip_derive/src/: argument.rs  derive.rs  lib.rs  option.rs  parser.rs  term.rs  utils.rs
examples/: ex.rs  ex_named.rs  ex_unnamed.rs
src/: core.rs  lib.rs  utils.rs  validator.rs
